Added sunfire plugin to pom.xml.