@@ -48,6 +48,13 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version> <configuration>
+                <argLine>--enable-preview</argLine>
+            </configuration>
+            </plugin>
         </plugins>
     </build>
 
